--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ body {
   justify-content: space-around;
   align-items: center;
   border-radius: 32px;
+  gap: 32px;
 }
 
 .result {
@@ -33,6 +34,8 @@ body {
   border-radius: 32px;
   color: hsl(0, 0%, 100%);
   height: 100%;
+  /* width: 330px; */
+  width: 50%;
 }
 
 .result__details {
@@ -52,19 +55,39 @@ body {
 .summary {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-around;
-  height: 100%;
-  width: 100%;
+  height: 420px;
+  width: 50%;
+  /* margin-left: 28px; */
 }
 
-.summary__details {
+/* .summary__title {
+  align-self: start;
+} */
+
+.scores {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  height: 50%;
+  height: 70%;
+  width: 80%;
+}
+
+.score {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 20%;
   width: 100%;
+  border-radius: 12px;
+}
+
+.details {
+  display: flex;
+  align-items: center;
+  gap: 12px;
 }
 
 .Continue-btn {
@@ -75,5 +98,46 @@ body {
   padding: 16px;
   font-size: 18px;
   cursor: pointer;
-  width: 70%;
+  width: 80%;
+}
+
+.reaction {
+  background-color: hsl(0, 100%, 98%);
+}
+
+.reaction_paragraph {
+  color: hsl(0, 100%, 67%);
+}
+
+.memory {
+  background-color: hsl(38, 100%, 98%);
+}
+
+.memory_paragraph {
+  color: hsl(39, 100%, 56%);
+}
+
+.verbal {
+  background-color: hsl(166, 100%, 98%);
+}
+
+.verbal_paragraph {
+  color: hsl(166, 100%, 37%);
+}
+
+.visual {
+  background-color: hsl(234, 85%, 98%);
+}
+
+.visual_paragraph {
+  color: hsl(234, 85%, 45%);
+}
+
+.score_paragraph {
+  color: hsl(224, 30%, 27%);
+}
+
+span {
+  color: hsl(224, 30%, 33%);
+  opacity: 0.5;
 }
